--- a/5_experimental_evaluation/results.tex
+++ b/5_experimental_evaluation/results.tex
@@ -41,16 +41,16 @@ A Tabela~\ref{table:results} resume os resultados experimentais. ``\textbf{\#}''
 \textbf{\#}       & \multicolumn{9}{c|}{\textbf{Tempo de Assentamento}}                                                                                                                               & \multicolumn{9}{c|}{\textbf{Sobressinal}}                                                                                                                                         & \multicolumn{9}{c|}{\textbf{Tempo de Assentamento e Sobressinal}}                                                                                                        \\ \hline
 \multirow{2}{*}{} & \multicolumn{3}{c|}{\textit{$\langle 4,4 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    & \multicolumn{3}{c|}{\textit{$\langle 4,4 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    & \multicolumn{3}{c|}{$\langle 4,4 \rangle $}      & \multicolumn{3}{c|}{\textit{$\langle 8,8 \rangle $}}      & \multicolumn{3}{c|}{\textit{$\langle 16,16 \rangle $}}    \\ \cline{2-28} 
                   & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} & \textit{\textbf{R}} & \textit{\textbf{T}} & \textit{\textbf{t}} \\ \hline
-1                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-2                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-3                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-4                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-5                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-6                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-7                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-8                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-9                 &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
-10                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+1                 &          S          &          1           &                &          S          &       1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+2                 &          S          &           1          &                &          S          &        1       &                &          S          &          4           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+3                 &          S          &           1          &                &          S          &        2        &                &          S          &          2           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+4                 &          S          &           1          &                &          S          &        1        &                &          S          &          1           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+5                 &          S          &           1          &                &          S          &        1        &                &          S          &          7           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+6                 &          S          &           1          &                &          S          &        5        &                &          S          &          41           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+7                 &          S          &           1          &                &          S          &        1        &                &          S          &          1           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+8                 &          S          &           1          &                &          S          &        1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+9                 &          S          &           1          &                &          S          &        1        &                &          S          &          3           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
+10                &          S          &           3          &                &          S          &        2        &                &          S          &          6           &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
 11                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
 12                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
 13                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &                    &                     &                &           &                     &                &                    &                     &                &                    &                     &                \\ \hline
@@ -79,7 +79,7 @@ Usando a técnica de alocação de polos, conforme descrito em \eqref{subsec:ap}, t
 Primeiramente obtemos o polinômio característico da matriz $\mathbf{A}$ e aplicamos na Equação~\ref{eq:matrixQ}, para obter a matrix $\mathbf{P}$, que é
 
 \begin{equation*}
-P=1.0e+06 \times \begin{bmatrix}
+P=10^6 \times \begin{bmatrix}
    -2.2464 &  -0.0337  &  0.9006  &  0.0135 \\
    -2.2464 &  -0.0112  &  0.8984  &  0.0045 \\
    -2.2464 &   0.0112  &  0.8984  & -0.0045 \\
