--- a/references/references.bib
+++ b/references/references.bib
@@ -1289,3 +1289,11 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   journal={URl: https://github.com/olmallet81/GALGO-2.0},
   year={2017}
 }
+@inproceedings{cavalcante2017planning,
+  title={Planning and Evaluation of UAV Mission Planner for Intralogistics Problems},
+  author={Cavalcante, Thiago Rodrigo Felix and de Bessa, Iury Valente and Cordeiro, Lucas Carvalho},
+  booktitle={2017 VII Brazilian Symposium on Computing Systems Engineering (SBESC)},
+  pages={9--16},
+  year={2017},
+  organization={IEEE}
+}
